# holo-chan

./: .env.example  .gitignore  AGENTS.md  main.py  pyproject.toml  stt.py  tts.py
holo_chan/: agent.py  main.py  stt.py  tts.py
holo_chan/integrations/discord/: __init__.py  input.py  output.py  session.py  wiring.py
holo_chan/io/: __init__.py  input_local.py  interfaces.py  output_local.py
tests/: test_run_agent.py
